@@ -1,0 +1,5 @@
+{% extends "layout.twig" %}
+
+{% block content %}
+    {{ commonFile(15) }}
+{% endblock %}
