@@ -27,6 +27,7 @@
         <li class="list-group-item list-group-item-dark">Extension</li>
         <a href="/email/index"><li class="list-group-item">E-Mail</li></a>
         <a href="/index/storage"><li class="list-group-item">Storage</li></a>
+        <a href="/index/commonFile"><li class="list-group-item">commonFile</li></a>
 
         <li class="list-group-item list-group-item-dark">Other</li>
         <a href="/index/alert" class="ajaxlink"><li class="list-group-item">Alert</li></a>
